# comfyui-browser

./: .gitignore  CHANGELOG.md  README.md  README_CN.md  __init__.py  nohup.out  pyproject.toml  requirements.txt  utils.py
.github/ISSUE_TEMPLATE/: new-workflow-repository.md
data/: sources.json
nodes/: dify_text_generator.py  load_image_by_url.py  remote_callback.py  select_inputs.py  upload_to_remote.py  xyz_plot.py
routes/: collections.py  config.py  downloads.py  files.py  sources.py  xyz_plot.py
svelte/: .prettierrc  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
svelte/src/: app.css  app.html  app.sass
svelte/src/i18n/: en-US.json  index.ts  zh-CN.json
svelte/src/lib/: db.ts  random.ts
svelte/src/lib/analyze/: layout.svelte  table-axis.svelte  table-cell-axis.svelte  table-cell-img.svelte  table-holder.svelte  table.svelte
svelte/src/lib/icons/: info.svelte
svelte/src/lib/multi-dim-table/: layout.svelte  models.ts  score.svelte  store.ts  table-axis.svelte  table-cell-axis.svelte  table-cell-img.svelte  table-holder.svelte  table.svelte  utils.ts
svelte/src/routes/: +layout.svelte  +layout.ts  +page.svelte  CollectionsList.svelte  CollectionsTab.svelte  DownloadHistory.svelte  FilesList.svelte  FilesTab.svelte  MediaShow.svelte  ModelsTab.svelte  Navbar.svelte  NewDownload.svelte  SourcesTab.svelte  Tabs.svelte  Toast.svelte  utils.ts
svelte/src/routes/analyze/: +layout.ts  +page.svelte  (+1 more)
web/: index.js  package-lock.json  svelte.config.js
web/nodes/: selectInputs.js  xyzPlot.js
(+4 files in other folders)
