[project]
name = "comfyui-browser"
description = ""
version = "1.0.0"
license = "LICENSE"
dependencies = ["tqdm", "pandas", "numpy", "requests", "urllib3"]

[project.urls]
Repository = "https://github.com/talesofai/comfyui-browser"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-browser"
Icon = ""
